tests/ui/match-stable.stderr
error: E::Bbb should sort before E::Ccc
  --> tests/ui/match-stable.rs:17:9
   |
17 |         E::Bbb(_, _) => {}
   |         ^^^^^^
